# Jaculus-esp32

./: sdkconfig.defaults-esp32s3-octal
.github/workflows/: upload-release.yml
components/common/: CMakeLists.txt  idf_component.yml  types.cpp
components/common/include/: types.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/espFeatures/: i2cFeature.h  smartLedFeature.h
main/espFeatures/hub75/: hub75Feature.cpp  hub75Feature.h
main/espFeatures/renderer/: rendererFeature.h
main/espFeatures/renderer/include/: Collider.hpp  Renderer.hpp  Texture.hpp
main/espFeatures/renderer/include/Shapes/: Collection.hpp  Shape.hpp
main/espFeatures/renderer/src/: Collider.cpp  Renderer.cpp  Texture.cpp
main/espFeatures/renderer/src/Shapes/: Circle.cpp  Collection.cpp  LineSegment.cpp  Polygon.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp
main/platform/: esp32s3.h
scripts/: build-esp32-s3-generic-octal.sh
ts-examples/@types/: hub75.d.ts  renderer.d.ts
ts-examples/src/: asteroids.ts  blinksmart.ts  constants.ts  doom.ts  gomoku.ts  index.ts  oled.ts  pins.ts  render.ts  renderTest.ts  rp-hub75-spi.ts  smartledColor.ts  snake.ts  snakeDisplay.ts
ts-examples/src/games/: asteroids.ts  doom.ts  gameExit.ts  game_menu.ts  minesweeper.ts  pong.ts  snakeDisplay.ts  tetris.ts
ts-examples/src/games/wolfenstein/: config.ts  wolfenstein.ts
